--- a/src/app/collection/collection.component.html
+++ b/src/app/collection/collection.component.html
@@ -5,12 +5,12 @@
 </div>
 <div class="d-flex justify-content-center"></div>
 
-<div class="subtitle">
-<h5>The online store will open soon! 
+<div class="subtitle text-center">
+<h6>The online store will open soon! 
   <br>
 <br>
 オンラインショップは間もなく開店します！
- </h5>
+ </h6>
 </div>
       <div class="container-fluid text-center ">
      
