--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,38 +1,11 @@
-<div id="home" class="container-fluid">
+<!-- <div id="home" class="container-fluid">
+  <div class="row">
 <section class ="home">
-
-  <!-- <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img class="d-block w-100" src="../../assets/images/landing1.jpg" alt="First slide">
-      </div>
-      <div class="carousel-item">
-        <img class="d-block w-100" src="../../assets/images/landing2.jpg" alt="Second slide">
-      </div>
-      <div class="carousel-item">
-        <img class="d-block w-100" src="../../assets/images/landing1.jpg" alt="Third slide">
-      </div>
-    </div>
-
-    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
-
-
-  </div> -->
-
-
- 
 
   <img src="../../assets/images/landing1.jpg"> 
  
-<div class="row carousel-caption">
-  <div class="col-md-6">
+<div class="carousel-caption">
+  <div class="col-md-4">
 <div class="card1">
 <p>Ethical <br>
   Natural <br>
@@ -43,36 +16,58 @@ Your Ownership</p>
 <h1>We prove all authentic</h1>
 </div>
 </div>
-<div class="col-md-6">
+<div class="col-md-8">
 
   <div class="card2">
     <br>
-  <h4>個々の宝石は、自然の特性や職人の技、倫理・社会的な事実の連鎖により、個性と価値が生まれています。</h4>
-<br><br>
-   <h4>RURIは宝石の証明された属性や物語、オーナーシップを真正な事実として歴史に刻み、宝石の深い喜びを届けます。</h4>
-  <br> <br>
-  <h4> 宝石の価値を正しく記憶し証明するため、ブロックチェーンの技術が使われています。 </h4>  
+  <h4>個々の宝石は、自然の特性や職人の技、倫理・社会的な事実の連鎖により、個性と価値が生まれています。<br><br>
+
+ RURIは宝石の証明された属性や物語、オーナーシップを真正な事実として歴史に刻み、宝石の深い喜びを届けます。<br><br>
+  
+ 宝石の価値を正しく記憶し証明するため、ブロックチェーンの技術が使われています。 </h4>  
     <br>
   </div>
   
 </div>
 </div>
 </section>
-
-
-<!-- <div class="d-flex justify-content-center">  
-</div> -->
-<!-- <div class="flex slogan">
-<div class="text-center">
-    <h4>
-     Your sustainable source of color stones
-    </h4>
-    <h5>
-      Meet ethical gems and provenance, The Serendipity Island - Sri Lanka
-    </h5>
-  </div>
-  </div> -->
 </div>
+</div> -->
+
+<div id="home" class="container-fluid ">
+  
+    <div class="row h-100">
+      <div class="col-sm-6 my-auto">
+       <div class="card1">
+        <p>Ethical <br>
+          Natural <br>
+        Fair Trade <br>
+        Certificate <br>
+        Provenance <br>
+        Your Ownership</p>
+        <h2>WE  PROVE  ALL  AUTHENTIC</h2>
+    </div>
+      </div>
+
+      <div class="col-sm-6 my-auto">
+        <div class="card2">
+  <h5><br>個々の宝石は、自然の特性や職人の<br>
+    技、倫理・社会的な事実の連鎖によ<br>
+    り、個性と価値が生まれています。<br><br>
+
+ RURIは宝石の証明された属性や物語、<br>
+ オーナーシップを真正な事実として <br>
+ 歴史に刻み、宝石の深い喜びを届け<br>
+ ます。<br><br> </h5>
+  
+ <h6>宝石の価値を正しく記憶し証明するため、ブロック<br>
+   チェーンの技術が使われています。<br><br> </h6> 
+      
+    </div>
+   </div>
+    </div>
+ 
+  </div>
 
 
 
