--- a/src/app/home/home.component.sass
+++ b/src/app/home/home.component.sass
@@ -1,58 +1,34 @@
-.home img
-    width: 100%
-    height: 800px
-    object-position: center
-    object-fit: cover
-
-.homecontent
-    position: absolute
-    top: 50%
-    left: 30%
-    transform: translate(-50%,-50%)
-    //background-color: rgba(#000, 0.7)
-
-.homecontent h1
-    color: #fff
-    font-size: 30px
-
-.d-flex
-    background-color: #192f60
-    width: 0.1%
-    height: 100px
-    margin-top: 10px
-    margin-bottom: 10px
-    align-items: center
-    margin-left: 50%
-
-.subtitle
-    display: flex
-    justify-content: center
-
-.slogan
-    width: 100%
-    height: 75px
-    background-color: rgba(#192f60, 0.9)
-    color: #fff
-    align-items: center
-    justify-content: center
-    font-family: Inter
 
 .card1
     background-color: rgba(#000, 0.0)
-    height: 400px
+    height: 100%
     width: 100%
-    align-items: center
-    font-size: 25pt
     text-align: left
+    color: #fff
+    margin-top: 70px
+    margin-left: 10%
+    font-size: 20pt
+    
 
 .card2
-    background-color: rgba(#000, 0.8)
-    height: 430px
+    background-color: rgba(#000, 0.7)
+    height: 150%
     width: 100%
     align-items: center
     font-size: 15pt
+    color: #fff
+    text-align: center
+    
     
     
 
-.carousel-caption
-    top: 30%
+
+.container-fluid
+    background-image: url('../../assets/images/landing1.jpg')
+    background-size: cover
+    width: 100%
+    height: 750px
+
+.my-auto
+    margin-top: auto
+    margin-bottom: auto
